tests/paczka1/fuzzy1/45529656.err
Error in line 3: CvJnWp1 A811 95,4
Error in line 9: gLQdie A646 1,4
Error in line 10: gLQdie A811 19,7
Error in line 13: dSLDLvk A610 75,4
Error in line 23: MxBUFkNh1p A646 2,93
Error in line 24: A811 A610 8,1
Error in line 17: dSLDLvk A811 99,0
Error in line 19: MxBUFkNh1p A811 45,7
Error in line 35: MxBUFkNh1p A321 31,7
